Changelog
*********

trunk (0.1dev)
--------------

- initial package skeleton [hplocher]